--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-tilt": "^1.0.2",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
