--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-parallax": "^3.5.1",
     "react-tilt": "^1.0.2",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
