--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.132",
+    "@mui/material": "^5.13.3",
     "@smastrom/react-rating": "^1.3.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -24,7 +28,6 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
-    "react-tabs": "^6.0.1",
     "react-tilt": "^1.0.2",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
